# docu-master

./: .dockerignore  Dockerfile  Dockerfile.test  Makefile  README.md  docker-compose.yml  pyproject.toml  settings.toml
src/: app.py  config.py  docs.py  errors.py  llm.py  logging.py  prompts.py  singleton.py  vector_store.py
tests/: __init__.py  conftest.py  data.py  test_api.py  test_chromadb.py  test_doc_service.py  test_docs_parsing.py  test_llm_service.py  test_prompts.py  test_vector_store.py
tests/api/: test_qa_endpoint.py  test_upload_endpoint.py
tests/outputs/test_doc_service/: test_document_retrieval_out.txt
tests/outputs/test_llm_service/: test_evaluate_llm_qa_out.txt
